--- a/.github/workflows/dotnet-release.yml
+++ b/.github/workflows/dotnet-release.yml
@@ -31,6 +31,7 @@ jobs:
             @semantic-release/github \
             @semantic-release/commit-analyzer \
             @semantic-release/release-notes-generator \
+            conventional-changelog-conventionalcommits \
             semantic-release-net
 
       - name: Semantic Release
