--- a/test/KubeOps.Operator.Web.Test/KubeOps.Operator.Web.Test.csproj
+++ b/test/KubeOps.Operator.Web.Test/KubeOps.Operator.Web.Test.csproj
@@ -1,12 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <ItemGroup>
         <PackageReference Include="KubernetesClient" Version="18.0.5" />
-        <PackageReference Include="Microsoft.Build.Locator" Version="1.10.12"/>
+        <PackageReference Include="Microsoft.Build.Locator" Version="1.11.1" />
         <PackageReference Include="Microsoft.CodeAnalysis" Version="5.0.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="5.0.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="5.0.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="5.0.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Build.Framework" Version="18.0.2" ExcludeAssets="runtime" />
     </ItemGroup>
     <ItemGroup Condition="'$(TargetFramework)'=='net8.0' Or '$(TargetFramework)'=='net9.0'">
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.0"/>
