--- a/test/KubeOps.Transpiler.Test/KubeOps.Transpiler.Test.csproj
+++ b/test/KubeOps.Transpiler.Test/KubeOps.Transpiler.Test.csproj
@@ -2,12 +2,13 @@
 
     <ItemGroup>
         <PackageReference Include="KubernetesClient" Version="18.0.5" />
-        <PackageReference Include="Microsoft.Build.Locator" Version="1.10.12" />
+        <PackageReference Include="Microsoft.Build.Locator" Version="1.11.1" />
         <PackageReference Include="Microsoft.CodeAnalysis" Version="5.0.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="5.0.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="5.0.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="5.0.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Build.Framework" Version="18.0.2" ExcludeAssets="runtime" />
     </ItemGroup>
 
     <ItemGroup>
